5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1863_1293.log
== TEST (2019-07-02 10:16:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array[[4,6,0],
					 [2,7,8],
					 [0,3,12]]
lugares = lugares.T

for i in range(dot(inv(v),lugares.T)):
	lugares[i] = 

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]:
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
File "XXXX", line 12
    lugares[i] = 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array[[4,6,0],
					 [2,7,8],
					 [0,3,12]]
lugares = lugares.T
d = dot(inv(v), lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]:
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
File "XXXX", line 20
    elif lugares[1] == max(lugares[i]:
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array[[4,6,0],
					 [2,7,8],
					 [0,3,12]]
lugares = lugares.T
d = dot(inv(v), lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:20:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array[[4,6,0], [2,7,8], [0,3,12]]
lugares = lugares.T
d = dot(inv(v), lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v), lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v), lugares*T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v), lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v), lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v),lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:24:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v),lugares.T)
for i in range(dot(inv(v),lugares)):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:25:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T

for i in range(dot(inv(v),lugares)):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:25:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T

for i in range(dot(inv(v),lugares.T)):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:27:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v), lugares.T)
for i in range():
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v), lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:31:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(v), lugares.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:32:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])
lugares = lugares.T
d = dot(inv(v), lugares)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:33:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:34:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(d):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:35:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia",round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:36:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia", round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:36:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia", round(lugares[0], ))
print("camarotes inferiores: ", round(lugares[1], ))
print("camarotes superiores: ", round(lugares[2], ))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:37:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia", round(lugares[0], 1))
print("camarotes inferiores: ", round(lugares[1], 1))
print("camarotes superiores: ", round(lugares[2], 1))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:37:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia", round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:38:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia", round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:39:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia", round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores: ")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia: ", round(lugares[0], 0))
print("camarotes inferiores: ", round(lugares[1], 0))
print("camarotes superiores: ", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia:", round(lugares[0], 0))
print("camarotes inferiores:", round(lugares[1], 0))
print("camarotes superiores:", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

print("plateia:", round(lugares[0], 0))
print("camarotes inferiores:", round(lugares[1], 0))
print("camarotes superiores:", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:43:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1

	print("plateia:", round(lugares[0], 0))
	print("camarotes inferiores:", round(lugares[1], 0))
	print("camarotes superiores:", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:44:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	lugares[i] = lugares[i] + 1
print("plateia:", round(lugares[0], 0))
print("camarotes inferiores:", round(lugares[1], 0))
print("camarotes superiores:", round(lugares[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = lugares[i] + 1
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:46:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = g[i] + 1
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- EXECUTION TIME:
0.997013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/1293/main.py", line 10, in <module>
    d[i] = g[i] + 1
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:46:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = d[i] + 1
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- EXECUTION TIME:
1.21241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/1293/main.py", line 15, in <module>
    if lugares[0] == max(lugares[i]):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:46:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = d[i] + 1
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if lugares[0] == max(lugares[i]):
	print("plateia")
elif lugares[1] == max(lugares[i]):
	print("camarotes inferiores")
elif lugares[2] == max(lugares[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:46:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = d[i] + 1
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if d[0] == max(d[i]):
	print("plateia")
elif d[1] == max(d[i]):
	print("camarotes inferiores")
elif d[2] == max(d[i]):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:47:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = d[i] + 1
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if d[0] == max(d):
	print("plateia")
elif d[1] == max(d):
	print("camarotes inferiores")
elif d[2] == max(d):
	print("camarotes superiores")							  
							  
-- EXECUTION TIME:
1.08147
-- TEST CASE 1:
---- input:
[27740,26598,15468]
---- correct output:
plateia: 5123.0
camarotes inferiores: 1208.0
camarotes superiores: 987.0
plateia
---- user output:
plateia: 5124.0
camarotes inferiores: 1209.0
camarotes superiores: 988.0
plateia
-- TEST CASE 2:
---- input:
[47612,78142,60342]
---- correct output:
plateia: 1322.0
camarotes inferiores: 7054.0
camarotes superiores: 3265.0
camarotes inferiores
---- user output:
plateia: 1323.0
camarotes inferiores: 7055.0
camarotes superiores: 3266.0
camarotes inferiores
-- TEST CASE 3:
---- input:
[2164,9042,10890]
---- correct output:
plateia: 16.0
camarotes inferiores: 350.0
camarotes superiores: 820.0
camarotes superiores

---- user output:
plateia: 17.0
camarotes inferiores: 351.0
camarotes superiores: 821.0
camarotes superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = d[i] + 1
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if d[0] == max(d):
	print("plateia")
elif d[1] == max(d):
	print("camarotes inferiores")
elif d[2] == max(d):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:48:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = d[i] + 2
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if d[0] == max(d):
	print("plateia")
elif d[1] == max(d):
	print("camarotes inferiores")
elif d[2] == max(d):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:48:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = d[i] 
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if d[0] == max(d):
	print("plateia")
elif d[1] == max(d):
	print("camarotes inferiores")
elif d[2] == max(d):
	print("camarotes superiores")							  
							  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:48:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

lugares = array([[4,6,0], [2,7,8], [0,3,12]])

d = dot(inv(lugares), v.T)
for i in range(size(d)):
	d[i] = d[i] 
print("plateia:", round(d[0], 0))
print("camarotes inferiores:", round(d[1], 0))
print("camarotes superiores:", round(d[2], 0))

if d[0] == max(d):
	print("plateia")
elif d[1] == max(d):
	print("camarotes inferiores")
elif d[2] == max(d):
	print("camarotes superiores")							  
							  
-- EXECUTION TIME:
1.11164
-- TEST CASE 1:
---- input:
[27740,26598,15468]
---- correct output:
plateia: 5123.0
camarotes inferiores: 1208.0
camarotes superiores: 987.0
plateia
---- user output:
plateia: 5123.0
camarotes inferiores: 1208.0
camarotes superiores: 987.0
plateia
-- TEST CASE 2:
---- input:
[47612,78142,60342]
---- correct output:
plateia: 1322.0
camarotes inferiores: 7054.0
camarotes superiores: 3265.0
camarotes inferiores
---- user output:
plateia: 1322.0
camarotes inferiores: 7054.0
camarotes superiores: 3265.0
camarotes inferiores
-- TEST CASE 3:
---- input:
[2164,9042,10890]
---- correct output:
plateia: 16.0
camarotes inferiores: 350.0
camarotes superiores: 820.0
camarotes superiores

---- user output:
plateia: 16.0
camarotes inferiores: 350.0
camarotes superiores: 820.0
camarotes superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
